<resources>
    <string name="activity">Activity</string>
    <string name="activity_asc">Activity ascending</string>
    <string name="activity_desc">Activity descending</string>
    <string name="activity_deleted">Activity deleted</string>
    <string name="activity_list">Activity List</string>
    <string name="activity_stats">Activity Statistics</string>
    <string name="activity_maintenance">Activity Maintenance</string>
    <string name="activity_history">History</string>
    <string name="activity_options">Options</string>
    <string name="activity_recovery">Restore Database</string>
    <string name="activity_about">About</string>
    <string name="activitytracker_database_restored">ActivityTracker com.fisincorporated.database restored.</string>
    <string name="add_new_activity">Add New Activity</string>
    <string name="add_new_exercise">Add New Exercise</string>
    <string name="add_new_location">Add New Location</string>
    <string name="additional_activity_info">"Additional Activity Info"</string>
    <string name="additional_activity_hint">"Weather or other info"</string>
    <string name="altitude_gained">Altitude Gained</string>
    <string name="altitude_lost">Altitude Lost</string>
    <string name="an_exercise_already_exists_with_this_name_exercise_not_added">An exercise already exists with this name. Exercise not added.</string>
    <string name="app_name">ActivityTracker</string>
    <string name="average_speed">Avg Speed</string>
    <string name="backup">Backup</string>
    <string name="backup_cancelled">Backup cancelled</string>
    <string name="backup_restore_database">Backup/Restore Database</string>
    <string name="backup_database">Backup Database</string>
    <string name="backup_file_will_be_placed_at">Backup file will be placed on SD card at</string>
    <string name="button_tag">button_tag</string>
    <string name="cancel">Cancel</string>
    <string name="cancelled">Cancelled</string>
    <string name="can_not_delete_as_log_records_exist_for_this_exercise">Can\'t delete as log records exist for this exercise</string>
    <string name="can_not_delete_as_exercise_does_not_exist">Can\'t delete as exercise does not exist"</string>
    <string name="can_not_read_backup">Can not read backup. ActivityTracker com.fisincorporated.database could not be restored.</string>
    <string name="change_map_type">Change Map Type</string>
    <string name="chart">Chart</string>
    <string name="chart_being_created_one_moment_please">Chart being created. One moment please</string>
    <string name="clear_filter">Clear Filter</string>
    <string name="clear_all_filters">Clear All Filters</string>
    <string name="confirm_delete_activity">Confirm you want to delete this activity</string>
    <string name="confirm_delete_exercise">Confirm you want to delete this exercise</string>
    <string name="confirm_cancel">Press Yes to confirm canceling this activity or No to continue</string>
    <string name="continuex">Continue</string>
    <string name="continue_activity">Continue Activity</string>
    <string name="continuing_activity">Continuing activity</string>
    <string name="date">Date</string>
    <string name="date_asc">Date ascending</string>
    <string name="date_desc">Date descending</string>
    <string name="define_exercise">Define Exercise</string>
    <string name="default_exercise_can_not_be_deleted">A default exercise can not be deleted</string>
    <string name="default_log_interval">Default Log Interval (seconds)</string>
    <string name="delete">Delete</string>
    <string name="delete_complete_activity">All?</string>
    <string name="delete_only_gps_detail">GPS trace?</string>
    <string name="delete_detail">Delete Detail</string>
    <string name="delete_prior_activity">Delete this activity</string>
    <string name="delete_trace">Delete only GPS trace</string>
    <string name="delete_activity_confirm_msg">Press Yes to delete all selected activities or press No to cancel the delete.</string>
    <string name="deletex">Delete</string>
    <string name="delete_confirmation">Press Yes to delete all record of this activity or press No to cancel.</string>
    <string name="delete_detail_confirmation">Press Yes to delete ONLY the GPS log detail for this activity (the summary will be kept) or press No to cancel.</string>
    <string name="description">Description</string>
    <string name="description_asc">Description ascending</string>
    <string name="description_desc">Description descending</string>
    <string name="display_units">Display Units</string>
    <string name="displaying_the_map_may_take_a_moment">Displaying the map may take a moment</string>
    <string name="distance">Distance</string>
    <string name="distance_by_date">Distance by Date</string>
    <string name="distance_in_last_month">Distance in last month</string>
    <string name="distance_per_week">Distance per week</string>
    <string name="distance_per_month">Distance per month</string>
    <string name="distance_per_year">Distance per year</string>
    <string name="distance_in">Distance in</string>
    <string name="distance_traveled">Distance Traveled</string>
    <string name="do_not_cancel">Do not Cancel</string>
    <string name="do_not_save">Do not Save</string>
    <string name="elevation">Elevation</string>
    <string name="elevation_vs_distance">Elevation vs Distance</string>
    <string name="email_activity_details">"Email Activity Details</string>
    <string name="email_being_created">One moment please. Email being created.</string>
    <string name="error_getting_activity_date">An error occurred finding activity date</string>
    <string name="error_getting_activity_info">An error occurred getting Activity information</string>
    <string name="exercise">Exercise</string>
    <string name="exercise_asc">Exercise ascending</string>
    <string name="exercise_desc">Exercise descending</string>
    <string name="exercise_information">Exercise Information</string>
    <string name="exercise_list">Exercise List</string>
    <string name="exercise_not_defined_nothing_to_save">"Exercise not defined. Nothing to save."</string>
    <string name="exercise_maintenance">Exercise Maintenance</string>
    <string name="exercise_map">Exercise Map</string>
    <string name="filter_by">Filter by</string>
    <string name="filter_by_activity">Filter by Activity</string>
    <string name="filter_by_exercise">Filter by Exercise</string>
    <string name="filter_by_location">Filter by Location</string>
    <string name="filter_list">Filter List</string>
    <string name="gps_enabled">GPS enabled</string>
    <string name="gps_disabled">GPS disabled</string>
    <string name="gps_log_detail_deleted">GPS Log detail deleted.</string>
    <string name="hello_world">Hello World</string>
    <string name="hello_user">Hello %1$s!</string>
    <string name="hint_activity_at_location">Activity@Location"</string>
    <string name="i_am_racking_up_the_miles">I am racking up the miles!</string>
    <string name="illegal_state_exception_caught">Illegal State exception caught</string>
    <string name="imperial">Imperial</string>
    <string name="kml_email_explain">If you have Google Earth (or equivalent) installed, clicking on the attached file will show you my route."</string>
    <string name="label">Label</string>
    <string name="latitude">Latitude</string>
    <string name="list_exercise_history">List Exercise History</string>
    <string name="location">Location</string>
    <string name="location_asc">Location ascending</string>
    <string name="location_desc">Location descending</string>
    <string name="log_gps_points">Log GPS points</string>
    <string name="log_interval">Log Interval (seconds)</string>
    <string name="longitude">Longitude</string>
    <string name="main_menu">Main Menu</string>
    <string name="main_menu_start_activity">Start Activity</string>
    <string name="main_menu_list_prior_activities">List Prior Activities</string>
    <string name="main_menu_activity_history">History</string>
    <string name="main_menu_exercise_setup">Exercise Setup</string>
    <string name="main_menu_program_options">Options</string>
    <string name="main_menu_about_activity_tracker">About ActivityTracker</string>
    <string name="map">Map</string>
    <string name="map_exercise">Map Exercise</string>
    <string name="maps_not_available">Maps not available. Please check to see if Google Maps available on your device.</string>
    <string name="max_speed">Max Speed</string>
    <string name="metric">Metric</string>
    <string name="minimum_distance_to_travel_to_log_gps_points">Minimum Distance To Travel ( %1$s ) To Log GPS Points</string>
    <string name="my_activity_statistics">My activity statistics for %1$s.</string>
    <string name="no">No</string>
    <string name="no_activities_to_display">No activities to display</string>
    <string name="no_activities_to_chart">No activities to chart</string>
    <string name="no_activities_found_for_time_period_selected">No activities found for time period selected</string>
    <string name="normal">Normal</string>
    <string name="number_gps_points"># GPS Points</string>
    <string name="ok">OK</string>
    <string name="error_reading_exercise_record">Oops. Error reading exercise record!</string>
    <string name="overall_altitude_change">Overall Altitude Change</string>
    <string name="pausing_activity">Pausing activity</string>
    <string name="permission_not_granted">Permission not granted</string>
    <string name="post_image">Post image</string>
    <string name="post_photos">Post photos</string>
    <string name="post_stats">Post stats</string>
    <string name="press_backup_to_make_backup">The backup will overwrite any existing backup. Press Backup to continue else cancel."</string>
    <string name="press_restore_to_restore">If you continue, there is no going back! The restore will overwrite your existing database! Press Restore to continue else cancel."</string>
    <string name="press_yes_to_delete_selected_activities_or_no_to_cancel">Press Yes to delete the selected activities or No to cancel.</string>
    <string name="press_yes_to_delete_GPS_delail_or_no_to_cancel">Press YES to delete GPS trace(s) or No to cancel.</string>
    <string name="rack_up_the_miles">Rack up the miles!</string>
    <string name="reenter_location_for_activity">Reenter the location for the Activity</string>
    <string name="review_exercise">Review Exercise</string>
    <string name="restart">Restart</string>
    <string name="restore">Restore</string>
    <string name="restore_file_will_be_read_from_above_backup_location">Restore file will be read from above backup location.</string>
    <string name="restore_database">Restore Database</string>
    <string name="restore_cancelled">Restore cancelled</string>
    <string name="satellite">Satellite</string>
    <string name="satellite_plus_streets">Satellite plus Streets</string>
    <string name="sort">Sort</string>
    <string name="start_exercise">Start Exercise</string>
    <string name="stop_exercise">Stop Exercise</string>
    <string name="show_map">Show Map</string>
    <string name="terrain">Terrain</string>
    <string name="action_start_activity">Start Activity</string>
    <string name="action_history">History</string>
    <string name="action_exercise_setup">Exercise Setup</string>
    <string name="action_about">About</string>
    <string name="settings">Settings</string>
    <string name="startup_image" translatable="false">startup_image</string>
    <string name="select_startup_background">Startup screen photo</string>
    <string name="backup_to_drive">Backup To Drive</string>
    <string name="backup_to_local_download_folder">Backup to local Download folder</string>
    <string name="drive_backup" translatable="false">drive_backup</string>
    <string name="local_backup" translatable="false">local_backup</string>
</resources>