<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.fisincorporated.exercisetracker.ui.startup.ExerciseDrawerActivity">

    <!-- TODO - add icons -->
    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_menu_start_activity"
            android:title="@string/action_start_activity"/>

        <item
            android:id="@+id/nav_menu_history"
            android:title="@string/action_history"/>
        <item
            android:id="@+id/nav_menu_exercise_setup"
            android:title="@string/action_exercise_setup"/>
        <item
            android:id="@+id/nav_menu_settings"
            android:title="@string/settings"/>
        <item
            android:id="@+id/nav_menu_backup_restore"
            android:title="@string/action_backup_restore"/>
        <item
            android:id="@+id/nav_menu_about"
            android:title="@string/action_about"/>

    </group>

</menu>




