<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/activity_row_summary_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

    <TextView
        android:id="@+id/activity_history_row_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/activity"
        android:textAppearance="?android:attr/textAppearanceSmall"/>

    <TextView
        android:id="@+id/activity_history_row_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_toRightOf="@+id/activity_history_row_activity"
        android:ellipsize="end"
        android:scrollHorizontally="true"
        android:text="@string/location"
        android:textAppearance="?android:attr/textAppearanceSmall"/>

    <TextView
        android:id="@+id/activity_history_row_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/activity_history_row_activity"
        android:text="@string/date"
        android:textAppearance="?android:attr/textAppearanceSmall"/>

    <TextView
        android:id="@+id/activity_history_row_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/activity_history_row_location"
        android:layout_below="@+id/activity_history_row_location"
        android:layout_toRightOf="@+id/activity_history_row_date"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/description"
        android:textAppearance="?android:attr/textAppearanceSmall"/>

</RelativeLayout>

