<?xml version="1.0" encoding="utf-8"?>

<!--   style="@style/standard_display"  -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <RelativeLayout
        android:id="@+id/prior_activity_row_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/prior_activity_row_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/activity"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/prior_activity_row_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="60dp"
            android:layout_toRightOf="@+id/prior_activity_row_activity"
            android:maxLines="2"
            android:scrollHorizontally="true"
            android:text="@string/location"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/prior_activity_row_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/prior_activity_row_1" >

        <TextView
            android:id="@+id/prior_activity_row_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/date"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/prior_activity_row_description"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/prior_activity_row_date"
            android:maxLines="2"
            android:paddingLeft="@dimen/default_gap"
            android:text="@string/description"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </RelativeLayout>

    <Button
        android:id="@+id/prior_activity_row_btnshowMap"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:focusable="false"
        android:text="@string/map"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>