<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/prior_activity_list"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/prior_activity_list_columns"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:orientation="horizontal"
        android:paddingTop="@dimen/dp8">

        <TextView
            android:id="@+id/prior_activity_list_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/margin_double"
            android:text="@string/exercise"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/prior_activity_list_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="44dp"
            android:text="@string/location"
            android:textAppearance="?android:attr/textAppearanceMedium" />


    </LinearLayout>

    <ListView
        android:id="@id/android:list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:divider="#fff"
        android:dividerHeight="@dimen/ts1sp"
        android:footerDividersEnabled="true"
        android:headerDividersEnabled="true"
        android:isScrollContainer="true"
        android:padding="@dimen/margin_double"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:scrollbars="vertical" />

    <TextView
        android:id="@+id/empty_activity_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/no_activities_to_display"
        android:visibility="gone" />


</LinearLayout>
